@@ -43,7 +43,7 @@ programmes de notation musicale et notre approche pour les r&eacute;soudre.
 
 <ul>
 <li><a href="#introduction">Introduction</a>&nbsp;: ce qui
-cloche dans la notation musicale informatis&eacute;e</li>
+cloche dans la notation musicale informatis&eacute;e&nbsp;;</li>
 
 <li><a href="#software">Ce qui ne va pas avec les logiciels</a>,
 ou pourquoi Finale n'est pas la panac&eacute;e en terme d'informatique
