@@ -21,7 +21,7 @@ sera plac&eacute; pour obtenir un r&eacute;sultat agr&eacute;able. Cet art est c
 <em>gravure musicale</em>. Ce terme vient du proc&eacute;d&eacute; traditionnel
 de l'impression musicale. Il y a encore quelques d&eacute;cennies, les 
 partitions &eacute;taient faites en taillant et ciselant la musique
-dans des plaques de zinc ou d'&eacute;tain, en inverse, comme dans un mirroir.
+dans des plaques de zinc ou d'&eacute;tain, en inverse, comme dans un miroir.
 Ces plaques &eacute;taient encr&eacute;es et les reliefs cr&eacute;&eacute;s par les poin&ccedil;ons et
 les d&eacute;coupes retenaient l'encre. La partition &eacute;tait alors r&eacute;alis&eacute;e
 en pressant le papier contre la plaque. D&eacute;coupes et poin&ccedil;ons &eacute;taient
