@@ -32,7 +32,7 @@ Le processus de mise en forme d'une partition consiste &agrave; lire et
 &eacute;crire des variables d'objets.</li>
 
 
-<li> Certaines variables one valeur pr&eacute;d&eacute;finie. Par exemple,
+<li> Certaines variables ont une valeur pr&eacute;d&eacute;finie. Par exemple,
 l'&eacute;paisseur de nombreuses lignes &ndash; caract&eacute;ristiques d'un style
 typographique &ndash; est pr&eacute;&eacute;tablie. La changer entra&icirc;ne un
 changement du style typographique.
