@@ -103,7 +103,7 @@ etc. sont donc inclus dans un groupe appel&eacute; &laquo;&nbsp;Voice context&nb
 les barres de mesures, etc. sont plac&eacute;es dans un groupe &laquo;&nbsp;Staff
 context&nbsp;&raquo; (<em>contexte de port&eacute;e</em>). Dans le cas d'une
 polyphonie, un contexte de port&eacute;e contient plusieurs contextes
-de voix. De m&ecirc;me, plusieurs contextes de port&eacute;es peuvent &ecirc;tre assembl&eacute;s dans un
+de voix. De m&ecirc;me, plusieurs contextes de port&eacute;e peuvent &ecirc;tre assembl&eacute;s dans un
 contexte de partition (&laquo;&nbsp;score context&nbsp;&raquo;)&nbsp;:
 </p>
 
