@@ -105,7 +105,7 @@ sans ambigu&iuml;t&eacute;.
 </p>
 
 <p>
-Ce sont la syntaxe et l'interface utilisteur qui concernent les utilisateurs.
+Ce sont la syntaxe et l'interface qui concernent les utilisateurs.
 Elles sont sujettes &agrave; discussion, puisque relatives aux go&ucirc;ts de chacun.
 Bien que ces discussions soient int&eacute;ressantes, elles ne sont pas
 productives. &Agrave; l'&eacute;chelle de LilyPond, l'importance du format de saisie
