@@ -116,6 +116,6 @@ par une meilleure interpr&eacute;tation.
 <p align="right">
 
 Suite&nbsp;: <a href="software.html">Ce qui ne va pas avec les
-logiciels</a>, ou pourquoi Finale n'est pas la panac&eacute;e en terme de
+logiciels</a>, ou pourquoi Finale n'est pas la panac&eacute;e en termes de
 logiciel de musique.
 </p>
