@@ -82,7 +82,7 @@ corrig&eacute;es et subsiteront dans l'&eacute;dition d&eacute;finitive.
 <p>
 Cet exemple peut sembler quelque peu exag&eacute;r&eacute;, mais en r&eacute;alit&eacute; ce n'est
 pas le cas. Tous les grands producteurs de logiciel de notation
-pr&eacute;tendent se conformer au standards de la gravure, mais aucun d'eux
+pr&eacute;tendent se conformer aux standards de la gravure, mais aucun d'eux
 n'en ma&icirc;trise correctement les bases, et tous font des erreurs
 flagrantes. Pour juger du r&eacute;sultat de votre logiciel pr&eacute;f&eacute;r&eacute;,
 procurez-vous une partition convenable &eacute;dit&eacute;e par une bonne vieille
