@@ -73,7 +73,7 @@ blocs.
 
 <p>
 Les lignes suppl&eacute;mentaires pr&eacute;sentent des difficult&eacute;s typographiques.
-Des surcharges avec d'autres signes &ndash; d'autres lignes ou des alt&eacute;rations)
+Des surcharges avec d'autres signes &ndash;&nbsp;d'autres lignes ou des alt&eacute;rations&nbsp;&ndash;
 sont vite arriv&eacute;es. Les autres logiciels &eacute;vitent ces collisions en
 espa&ccedil;ant davantage les lignes, ce qui occupe plus de place, ou en
 raccourcissant les lignes suppl&eacute;mentaires, au d&eacute;triment de la lisibilit&eacute;.
