@@ -21,17 +21,17 @@
 
 <ul>
   <li>Jamais entendu parler de LilyPond&nbsp;?
-    Lisez l'<a href="../switch/">introduction</a>.
+    Lisez l'<a href="../switch/">introduction</a>&nbsp;;
   </li>
 
   <li>Des questions&nbsp;? Jetez un oeil &agrave la <a href="features.html">
-  liste de ses fonctionnalit&eacute;s</a> ou parcourez la <a href="faq.html">FAQ</a>.
+  liste de ses fonctionnalit&eacute;s</a> ou parcourez la <a href="faq.html">FAQ</a>&nbsp;;
   </li>
 
   <li>Int&eacute;ress&eacute; par des informations plus approfondies&nbsp;? Lisez notre
     <a href="automated-engraving/">essai sur la gravure de la musique et la notation
       assist&eacute;e par ordinateur</a>, ou jetez un coup d'oeil &agrave; nos
-    <a href="pubs.html">publications</a>.
+    <a href="pubs.html">publications</a>&nbsp;;
   </li>
 
   <li>Qui a &eacute;crit LilyPond&nbsp;? Regardez la <a
