@@ -13,7 +13,7 @@
     Envoyez un courriel &agrave; <tt><a href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a></tt>
     (<a href="http://mail.gnu.org/mailman/listinfo/lilypond-user">info</a>
     sur la liste, 
-    <a href="http://mail.gnu.org/archive/html/lilypond-user/">archives</a>)
+    <a href="http://mail.gnu.org/archive/html/lilypond-user/">archives</a>).
     <br>
   </dd>
 
@@ -24,7 +24,7 @@
     (
     <a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">info</a>
     sur la liste, 
-    <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archives</a>)
+    <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archives</a>).
     <br>
   </dd>
 
@@ -33,7 +33,7 @@
     <tt><a href="mailto:info-lilypond@gnu.org">info-lilypond@gnu.org</a></tt>
     (<a href="http://mail.gnu.org/mailman/listinfo/info-lilypond">info</a>
     sur la liste, chercher dans les
-    <a href="http://mail.gnu.org/archive/html/info-lilypond/">archives</a>)
+    <a href="http://mail.gnu.org/archive/html/info-lilypond/">archives</a>).
   </dd>
 
   
@@ -42,7 +42,7 @@
     <tt><a href="mailto:bug-lilypond@gnu.org">bug-lilypond@gnu.org</a></tt>
     (<a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">info</a>
     sur la liste, 
-    <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archives</a>)
+    <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archives</a>).
   </dd>
 
   
@@ -51,7 +51,7 @@
     <tt><a href="mailto:lilypond-devel@gnu.org">lilypond-devel@gnu.org</a></tt>
     (<a href="http://mail.gnu.org/mailman/listinfo/lilypond-devel">info</a>
     sur la liste, 
-    <a href="http://mail.gnu.org/archive/html/lilypond-devel/">archives</a>)
+    <a href="http://mail.gnu.org/archive/html/lilypond-devel/">archives</a>).
   </dd>
 
   <dt>
