@@ -73,7 +73,7 @@
     
     <strong>NOTE&nbsp;:</strong> Avec LilyPond 2.2 et pr&eacute;c&eacute;dents, encadrez
     l'exemple ci-dessus avec les blocs
-    <code>\notes{}</code> <em>et</em> <code>\score {}</code>.
+    <code>\notes{}</code> <em>et</em> <code>\score{}</code>.
     
   </li>
   <li>Enregistrez le fichier sous <tt>test.ly</tt>. Quittez l'&eacute;diteur.
@@ -139,7 +139,7 @@
 
 <p>
   Pour les questions et l'aide, envoyer un courriel &agrave; <a
-					     href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a>
+					     href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a>.
 </p>
 
 <h2>Mince, &ccedil;a ne fonctionne pas&nbsp;!</h2>
@@ -149,5 +149,5 @@
  href="../about/faq.html#bugreport">FAQ</a> pour savoir comment faire. Si vous avez
  t&eacute;l&eacute;charg&eacute; un paquet autre que ceux fournis par l'&eacute;quipe de
  LilyPond, envoyez une copie de votre courriel au cr&eacute;ateur du paquetage, list&eacute; dans la colonne
- "Courtesy" de <a href="index.html">la page de t&eacute;l&eacute;chargement</a>.
+ "Packager" de <a href="index.html">la page de t&eacute;l&eacute;chargement</a>.
 </p>
