@@ -14,7 +14,7 @@
 <h2>Newbies</h2>
 <p>
   D&eacute;butez votre apprentissage avec le
-  <a href="@DOC@v2.6/Documentation/user/out-www/lilypond/Tutorial.html">Tutoriel</a>
+  <a href="@DOC@v2.6/Documentation/user/out-www/lilypond/Tutorial.html">Tutoriel</a>.
 </p>
 
 
@@ -29,7 +29,7 @@
 
 <p>
   Si elle n'y est pas, consultez la documentation
-  <a href="@DOC@v2.6">en ligne</a>.  (Pour les versions autres que 2.4,
+  <a href="@DOC@v2.6">en ligne</a>  (pour les versions autres que 2.6,
   cliquez <a href="../documentation.html">ici</a>).
 </p>
 
@@ -49,7 +49,7 @@
   <li>
     Pour souscrire, rendez-vous sur
     <quote>
-      <a href="http://mail.gnu.org/mailman/listinfo/lilypond-user">http://mail.gnu.org/mailman/listinfo/lilypond-user</a>
+      <a href="http://mail.gnu.org/mailman/listinfo/lilypond-user">http://mail.gnu.org/mailman/listinfo/lilypond-user</a>&nbsp;;
     </quote>
   </li>
 
@@ -57,7 +57,7 @@
     Pour consulter et rechercher, rendez-vous aux 
     <quote>
       <a
-	 href="http://mail.gnu.org/archive/html/lilypond-user">archives</a>
+	 href="http://mail.gnu.org/archive/html/lilypond-user">archives</a>.
     </quote>
   </li>
 </ul>
