@@ -61,12 +61,12 @@
 
 <ul>
   <li>
-    Cliquez <a href="test.ly">ici</a> pour t&eacute;l&eacute;charger un test.
+    Cliquez <a href="test.ly">ici</a> pour t&eacute;l&eacute;charger un test&nbsp;;
   </li>
 
   <li>
     Enregistrez le sur le bureau, en le nommant <tt>test.ly</tt> (assurez vous de 
-    <strong>ne pas</strong> le nommer <tt>test.ly<em>.TXT</em></tt>).
+    <strong>ne pas</strong> le nommer <tt>test.ly<em>.TXT</em></tt>)&nbsp;;
   </li>
 
   <li>
@@ -86,15 +86,15 @@ Le fichier sera alors compil&eacute;, et le r&eacute;sultat affich&eacute; dans 
 
 <p>
   Pour les questions et l'aide, envoyer un courriel &agrave; <a
-					     href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a>
+					     href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a>.
 </p>
 
 <h4>Mince, &ccedil;a ne fonctionne pas&nbsp;!</h4>
 
 <p>
   Essayez de relancer <tt>setup.exe</tt> ; cela r&eacute;soud 90&nbsp;% des probl&egrave;mes qui nous ont
-  &eacute;t&eacute; rapport&eacute;s...  Assurez-vous d'avoir install&eacute; la bonne version de LilyPond&nbsp;
-  en cliquant deux fois sur le "package" selectionn&eacute;, vous obtiendrez une version ancienne
+  &eacute;t&eacute; rapport&eacute;s...  Assurez-vous d'avoir install&eacute; la bonne version de LilyPond&nbsp;;
+  en cliquant deux fois sur le paquet selectionn&eacute;, vous obtiendrez une version ancienne
   de LilyPond.
 
 <p>
@@ -123,7 +123,7 @@ Le fichier sera alors compil&eacute;, et le r&eacute;sultat affich&eacute; dans 
 <p>
   LilyPond n'a pas &eacute;t&eacute; install&eacute; correctement.  Retournez &agrave;
   l'<a href="#installing">installation</a> et rev&eacute;rifiez la proc&eacute;dure
-  d'installation que vous avez effectu&eacute;.  Dans le doute, envoyez un courriel &agrave;
+  d'installation que vous avez effectu&eacute;e.  Dans le doute, envoyez un courriel &agrave;
   <a href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a>
 </p>
 
@@ -143,26 +143,27 @@ Le fichier sera alors compil&eacute;, et le r&eacute;sultat affich&eacute; dans 
     La m&eacute;thode officielle&nbsp;:
     <ul>
       <li>
-	<p>D&eacute;marrez <code>setup.exe</code>,
-	  <li>
-	    Cliquez sur "next".
+	<p>D&eacute;marrez <code>setup.exe</code>&nbsp;
 	  </li>
 	  <li>
-	    S&eacute;lectionnez <strong>Install from Local Directory</strong>.
+	    Cliquez sur "next"&nbsp;
+	  </li>
+	  <li>
+	    S&eacute;lectionnez <strong>Install from Local Directory</strong>&nbsp;
 	  </li>
 
 	  <li>
 	    Cliquez sur "next" jusqu'&agrave; atteindre <strong>Select
-	      packages to install</strong>.
+	      packages to install</strong>&nbsp;
 	  </li>
 
 	  <li>
-	    Cliquez sur <strong>View</strong>.
+	    Cliquez sur <strong>View</strong>&nbsp;
 	  </li>
 
 	  <li>
 	    Pour chaque paquet que vous souhaitez d&eacute;sinstaller,
-	    Cliquez sur la double fl&eagrave;che jusqu'&agrave; l'affichage de <strong>Uninstall</strong>.
+	    Cliquez sur la double fl&eagrave;che jusqu'&agrave; l'affichage de <strong>Uninstall</strong>&nbsp;
 	  </li>
 
 	  <li>
