@@ -43,12 +43,12 @@
   <dt>Pas de bricolage</dt>
 
   <dd>
-   Ne perdez pas votre temps &agrave; retoucher le r&eacute;sultat&nbsp;; LilyPond
+   Ne perdez pas votre temps &agrave; retoucher le r&eacute;sultat&nbsp;: LilyPond
    produit un formatage correct d&egrave;s le d&eacute;part. Le programme d&eacute;termine
    lui-m&ecirc;me l'espacement, les sauts de ligne et de page afin
-   d'obtenir une mise en page serr&eacute;e et uniforme. Les collisions entre
-   les paroles, les notes et les accords sont r&eacute;solues, la courbure
-   des liaisons et la pente des fuseaux sont d&eacute;termin&eacute;s, tout cela
+   d'obtenir une mise en page dense et uniforme. Les collisions entre
+   les paroles, les notes et les accords sont &eacute;vit&eacute;es, la courbure
+   des liaisons et la pente des lien sont d&eacute;termin&eacute;s, tout cela
    <em>automatiquement</em>&nbsp;!
   </dd>
 
@@ -58,9 +58,9 @@
     Tous les aspects stylistiques, designs des polices et algorithmes
     ont &eacute;t&eacute; inspir&eacute;s par les plus belles partitions grav&eacute;es
     traditionnellement. Le r&eacute;sultat produit par LilyPond a le m&ecirc;me
-    aspect solide et &eacute;quilibr&eacute; qu'une partition traditionnelle.
-    (<a href="../about/automated-engraving/typography-features.html">En
-    savoir plus</a>)
+    aspect solide et &eacute;quilibr&eacute; qu'une partition traditionnelle
+    (<a href="../about/automated-engraving/typography-features.html">en
+    savoir plus</a>).
     
     <img src="@IMAGES@flat-design.png" align="right" alt="flat-design">
 
@@ -85,7 +85,7 @@
     <p>
       De plus c'est aussi un logiciel libre. Son code source est
       disponible librement, vous pouvez le modifier et le
-      copier. &Ecirc;tes-vous irrit&eacute;s par un bug, ou trouvez-vous
+      copier. &Ecirc;tes-vous irrit&eacute;s par un bogue, ou trouvez-vous
       qu'une fonctionnalit&eacute; manque&nbsp;? Ajoutez-la simplement
       vous-m&ecirc;me, ou payez quelqu'un pour le faire.
     </p>
@@ -106,7 +106,7 @@
     MacOS X et Windows. LilyPond est fourni avec un manuel utilisateur
     de 230 pages et plus de 400 fichiers-exemples. Une communaut&eacute;
     d'utilisateurs active r&eacute;pond aux questions sur la liste de diffusion
-    <a href="http://news.gmane.org/gmane.comp.gnu.lilypond.general">Lilypond
+    <a href="http://news.gmane.org/gmane.comp.gnu.lilypond.general">LilyPond
     user</a>, tandis que
     <a href="../about/thanks.html">l'&eacute;quipe de d&eacute;veloppement</a>
     assure une r&eacute;solution rapide des probl&egrave;mes.
