@@ -16,7 +16,7 @@
   lot)</em>&nbsp;: il op&egrave;re sur un fichier texte contenant
   les notes. Le r&eacute;sultat produit en sortie  peut &ecirc;tre
   vu &agrave; l'&eacute;cran ou imprim&eacute;. Une capture
-  d'&eacute;cran d'un usage pratique pourrait ressembler &agrave;
+  d'&eacute;cran d'un usage pratique pourrait ressembler &agrave; ceci&nbsp;:
 </p>
 
 <p align="center">
