@@ -34,7 +34,7 @@
   impressionn&eacute;. J'ai utilis&eacute; ce programme pour un motet
   de Josquin Desprez en notation mensurale et je dois dire que
   lilypond  d&eacute;passe de loin tous les autres programmes de
-  notation tant au niveau de la rapidit&eacute;, que de l'ergonomie et
+  notation tant au niveau de la rapidit&eacute; que de l'ergonomie et
   du r&eacute;sultat&nbsp;!&rdquo;
 </p>
 <p align="right">
@@ -84,7 +84,7 @@ crapaud</a>.</p>
   plus r&eacute;centes productions des "bonnes vieilles maisons". [...]
 </p>
 <p>
-  Faites donc mieux que Finale/Sibelius/Igor/et consorts&nbsp;!!!&rdquo;
+  &ldquo;Faites donc mieux que Finale/Sibelius/Igor/et consorts&nbsp;!!!&rdquo;
 </p>
 <p align="right">
   <em>
@@ -165,10 +165,10 @@ crapaud</a>.</p>
 
 
 <p>
-  Je consid&egrave;re [que LilyPond est] un programme incroyable, et qu'il
+  &ldquo;Je consid&egrave;re [que LilyPond est] un programme incroyable, et qu'il
   produit des choses d'excellente qualit&eacute;. Apr&egrave;s avoir
   lu une interview &agrave; son sujet l'an dernier, j'ai d&eacute;lir&eacute; avec
-  plusieurs de mes amis sur son potentiel.
+  plusieurs de mes amis sur son potentiel.&rdquo;
 </p>
 <p align="right">
   <em>Paul Davis, d&eacute;veloppeur de
