@@ -46,7 +46,7 @@
 <p>
   Notre travail sur LilyPond tire son inspiration de la gravure
   traditionnelle. La musique classique ne lui pose donc aucun
-  probl&egrave;me. De simples solos s'obtiennent en un tour de main,
+  probl&egrave;me. De simples solos s'obtiennent en un tour de main&nbsp;:
 </p>
 
 <p align="center">
@@ -61,7 +61,7 @@
 
 <p>
   et avec un peu de travail, des &oelig;uvres complexes sont aussi
-  r&eacute;alisables&nbsp;
+  r&eacute;alisables&nbsp;:
 </p>
 
 <p align="center">
@@ -75,8 +75,8 @@
 
 <p>
   D'autres extraits de versions plus r&eacute;centes de LilyPond sont
-  accessibles dans les pages de documentation. Il y a des pages
-  s&eacute;par&eacute;es pour les versions <a
+  accessibles dans les pages de documentation. Des pages
+  s&eacute;par&eacute;es existent pour les versions <a
   href="@DOC@v2.6/examples.html">stable</a> et de
   <a href="@DOC@v2.7/examples.html">d&eacute;veloppement</a>.
 </p>
