@@ -29,6 +29,14 @@ on one day.
 !-->
 
 
+<dt><b>Traduction fran&ccedil;aise du site</b> - <em>September 03, 2005</em></dt>
+<dd>
+Grâce à <a href=about/thanks#website>l'équipe des traducteurs</a>,
+de nombreuses pages du site sont maintenant disponibles en fran&ccedil;ais,
+notamment l'<a href="about/automated-engraving/index.fr.html">essai sur
+la gravure musicale</a>.
+</dd>
+
 <dt><b>LilyPond 2.7.8 is out</b> - <em>August 29, 2005</em></dt>
 
 <dd>
